# Caprica

./: .clang-format  .gitignore  CMakeLists.txt  Caprica.sln  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
Caprica/: CMakeLists.txt  Caprica.vcxproj  Caprica.vcxproj.filters  CapricaConfig.cpp  CapricaConfig.h  CapricaError.h  Config.h  main.cpp  main_options.cpp
Caprica/cmake/: Config.cmake.in
Caprica/common/: AtomicStack.h  ByteSwap.h  CapricaAllocator.cpp  CapricaAllocator.h  CapricaBinaryReader.h  CapricaBinaryWriter.h  CapricaConfig.cpp  CapricaConfig.h  CapricaError.cpp  CapricaError.h  CapricaFileLocation.h  CapricaInputFile.cpp  CapricaInputFile.h  CapricaJobManager.cpp  CapricaJobManager.h  CapricaReferenceState.h  CapricaReportingContext.cpp  CapricaReportingContext.h  CapricaStats.cpp  CapricaStats.h  CapricaUserFlagsDefinition.cpp  CapricaUserFlagsDefinition.h  CaselessStringComparer.cpp  CaselessStringComparer.h  Concurrency.h  EngineLimits.h  FSUtils.cpp  FSUtils.h  FakeScripts.cpp  FakeScripts.h  GameID.h  IntrusiveLinkedList.h  IntrusiveStack.h  LargelyBufferedString.h  UtilMacros.h  identifier_ref.cpp  identifier_ref.h
Caprica/common/allocators/: AtomicCachePool.h  AtomicChainedPool.cpp  AtomicChainedPool.h  CachePool.h  ChainedDestructedPooledAllocator.h  ChainedPool.cpp  ChainedPool.h  FileOffsetPool.h  ReffyStringPool.cpp  ReffyStringPool.h
Caprica/common/parser/: CapricaPPJParser.cpp  CapricaPPJParser.h  CapricaUserFlagsLexer.cpp  CapricaUserFlagsLexer.h  CapricaUserFlagsParser.cpp  CapricaUserFlagsParser.h  PapyrusProject.h
Caprica/expressions/: PapyrusFunctionCallExpression.cpp
Caprica/papyrus/: PapyrusCFG.cpp  PapyrusCFG.h  PapyrusCompilationContext.cpp  PapyrusCompilationContext.h  PapyrusCustomEvent.cpp  PapyrusCustomEvent.h  PapyrusFunction.cpp  PapyrusFunction.h  PapyrusFunctionParameter.h  PapyrusGuard.cpp  PapyrusGuard.h  PapyrusIdentifier.cpp  PapyrusIdentifier.h  PapyrusLocalVariable.h  PapyrusLockParameter.h  PapyrusNamespaceResolutionContext.cpp  PapyrusNamespaceResolutionContext.h  PapyrusObject.cpp  PapyrusObject.h  PapyrusProperty.cpp  PapyrusProperty.h  PapyrusPropertyGroup.h  PapyrusResolutionContext.cpp  PapyrusResolutionContext.h  PapyrusScript.cpp  PapyrusScript.h  PapyrusScriptLoader.cpp  PapyrusScriptLoader.h  PapyrusState.cpp  PapyrusState.h  PapyrusStruct.h  PapyrusStructMember.h  PapyrusType.cpp  PapyrusType.h  PapyrusUserFlags.cpp  PapyrusUserFlags.h  PapyrusValue.cpp  PapyrusValue.h  PapyrusVariable.cpp  PapyrusVariable.h
Caprica/papyrus/expressions/: PapyrusArrayIndexExpression.h  PapyrusArrayLengthExpression.h  PapyrusBinaryOpExpression.h  PapyrusCastExpression.cpp  PapyrusCastExpression.h  PapyrusExpression.cpp  PapyrusExpression.h  PapyrusFunctionCallExpression.cpp  PapyrusFunctionCallExpression.h  PapyrusIdentifierExpression.h  PapyrusIsExpression.h  PapyrusLiteralExpression.h  PapyrusMemberAccessExpression.h  PapyrusNewArrayExpression.h  PapyrusNewStructExpression.h  PapyrusParentExpression.h  PapyrusSelfExpression.h  PapyrusUnaryOpExpression.h
Caprica/papyrus/parser/: PapyrusFileLocation.h  PapyrusLexer.cpp  PapyrusLexer.h  PapyrusParser.cpp  PapyrusParser.h
Caprica/papyrus/statements/: PapyrusAssignStatement.h  PapyrusBreakStatement.h  PapyrusContinueStatement.h  PapyrusDeclareStatement.h  PapyrusDoWhileStatement.h  PapyrusExpressionStatement.h  PapyrusForEachStatement.cpp  PapyrusForEachStatement.h  PapyrusForStatement.h  PapyrusGuardStatement.cpp  PapyrusGuardStatement.h  PapyrusIfStatement.h  PapyrusLockStatement.cpp  PapyrusLockStatement.h  PapyrusReturnStatement.h  PapyrusStatement.h  PapyrusStatementVisitor.h  PapyrusSwitchStatement.h  PapyrusTryGuardStatement.cpp  PapyrusTryGuardStatement.h  PapyrusTryLockStatement.cpp  PapyrusTryLockStatement.h  PapyrusWhileStatement.h
Caprica/pex/: FixedPexStringMap.h  PexAsmWriter.h  PexDebugFunctionInfo.cpp  PexDebugFunctionInfo.h  PexDebugInfo.cpp  PexDebugInfo.h  PexDebugPropertyGroup.cpp  PexDebugPropertyGroup.h  PexDebugStructOrder.cpp  PexDebugStructOrder.h  PexFile.cpp  PexFile.h  PexFunction.cpp  PexFunction.h  PexFunctionBuilder.cpp  PexFunctionBuilder.h  PexFunctionParameter.cpp  PexFunctionParameter.h  PexGuard.cpp  PexGuard.h  PexInstruction.cpp  PexInstruction.h  PexLabel.h  PexLocalVariable.cpp  PexLocalVariable.h  PexObject.cpp  PexObject.h  PexOptimizer.cpp  PexOptimizer.h  PexProperty.cpp  PexProperty.h  PexReader.h  PexReflector.cpp  PexReflector.h  PexState.cpp  PexState.h  PexString.h  PexStruct.cpp  PexStruct.h  PexStructInfo.cpp  (+9 more)
Caprica/pex/parser/: PexAsmLexer.cpp  PexAsmLexer.h  PexAsmParser.cpp  PexAsmParser.h
Caprica/vmad/: VMADFragment.h  VMADInfo.h  VMADProperty.h  VMADScript.h
test/: Starfield_Papyrus_Flags.flg
